--- a/trash2trade-backend/package.json
+++ b/trash2trade-backend/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^7.8.8",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
