--- a/trash2trade-frontend/package.json
+++ b/trash2trade-frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.13.2",
+    "framer-motion": "^12.23.26",
     "react": "^19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.5.1",
